--- a/public/media/css/main.css
+++ b/public/media/css/main.css
@@ -4,6 +4,23 @@ ul li .relative{
 
 
 
+
+
+.exmp6 {
+    max-height: 520px;
+
+  }
+  .exmp6 img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    filter: grayscale(100%);
+  }
+
+  .exmp6 img:hover{
+    filter: grayscale(0%);
+  }
+
 header .head-top{
     background-color: #e9e6e6;
     padding: 5px 0;
@@ -14,6 +31,13 @@ header .head-top nav a{
     /* background-color: #343434; */
     /* border-radius: 50px; */
 }
+ .logo{
+    color: #343434;
+    background-color: #bcd4e6;
+    border-color: #bcd4e6;
+ }
+
+
 
 /*
 header .head-top nav {
@@ -42,21 +66,21 @@ header .header a:hover{
     /* border-bottom: 1px solid salmon; */
 }
 
-header .header form div{
+header .head-top form div{
     background-color: #fff;
     border: #dad2d2 1px solid;
     border-radius: 5px;
     padding-left: 15px;
     padding-right: 8px;
 }
-header .header form div input{
+header .head-top form div input{
     border: none;
     outline: none;
     width: 100%;
     max-width: 329px;
     width: 100%;
 }
-header .header form div button{
+header .head-top form div button{
     background: none;
     border: none;
     outline: none;
