--- a/public/media/css/main.css
+++ b/public/media/css/main.css
@@ -2,42 +2,43 @@ ul li .relative{
     width: 20px;
 }
 
-
-
-
-
 .exmp6 {
     max-height: 520px;
+}
 
-  }
-  .exmp6 img {
+.exmp6 img {
     object-fit: cover;
     width: 100%;
     height: 100%;
     filter: grayscale(100%);
-  }
+}
 
-  .exmp6 img:hover{
+.exmp6 img:hover{
     filter: grayscale(0%);
-  }
+}
 
 header .head-top{
     background-color: #e9e6e6;
-    padding: 5px 0;
+    padding: 25px 0;
 }
+
 header .head-top nav a{
     width: 20px;
     height: 20px;
     /* background-color: #343434; */
     /* border-radius: 50px; */
 }
+
  .logo{
     color: #343434;
     background-color: #bcd4e6;
     border-color: #bcd4e6;
- }
+}
 
-
+/* img{
+    height: 30px;
+    width: 30px;
+} */
 
 /*
 header .head-top nav {
@@ -53,6 +54,7 @@ header .header{
     border-bottom: 1px solid #dad2d2;
     padding: 15px 0;
 }
+
 header .header a{
     font-size: 0,875rem;
     line-height: 19px;
@@ -61,6 +63,7 @@ header .header a{
     border-bottom: 1px solid transparent;
     transition: 0.5 as all ease;
 }
+
 header .header a:hover{
     color: salmon;
     /* border-bottom: 1px solid salmon; */
@@ -73,6 +76,7 @@ header .head-top form div{
     padding-left: 15px;
     padding-right: 8px;
 }
+
 header .head-top form div input{
     border: none;
     outline: none;
@@ -80,6 +84,7 @@ header .head-top form div input{
     max-width: 329px;
     width: 100%;
 }
+
 header .head-top form div button{
     background: none;
     border: none;
@@ -87,6 +92,14 @@ header .head-top form div button{
     width: 20px;
     height: 20px;
     padding: 0;
+}
+
+.header .col{
+    width: -webkit-fill-available;
+}
+
+.search{
+    width: -webkit-fill-available;
 }
 
 /*
