--- a/public/media/css/main.css
+++ b/public/media/css/main.css
@@ -1,3 +1,10 @@
+#btn-back-to-top {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    display: none;
+  }
+
 ul li .relative{
     width: 20px;
 }
